--- a/routing/src/app/home/home.component.html
+++ b/routing/src/app/home/home.component.html
@@ -1,2 +1,5 @@
 <h4>Welcome to Server Manager 4.0</h4>
 <p>Manage your Servers and Users.</p>
+<button
+class="bg-primary p-2 border-round border-1 surface-border mb-2 cursor-pointer"
+(click)="onLoadServers()">Update Server</button>
