--- a/routing/src/app/servers/servers.component.html
+++ b/routing/src/app/servers/servers.component.html
@@ -11,6 +11,7 @@
         </div>
     </div>
     <div class="col-12">
+        <button (click)="onReload()">Reload Page</button>
         <app-edit-server></app-edit-server>
         <hr>
         <app-server></app-server>
